--- a/app/views/templates/main.scala.html
+++ b/app/views/templates/main.scala.html
@@ -9,7 +9,7 @@
 		<link rel="shortcut icon" type="image/png" href="@routes.MyAssets.img("favicon.png")">
 		<link rel="stylesheet" media="screen" href="@routes.MyAssets.lib("bootstrap/css/bootstrap.min.css")">
 		<link rel="stylesheet" media="screen" href="@routes.MyAssets.css("main.css")">
-		<script src="@routes.MyAssets.lib("requirejs/require.js")" type="text/javascript"></script>
+		<script data-main="@routes.MyAssets.js("main.js")" src="@routes.MyAssets.lib("requirejs/require.js")" type="text/javascript"></script>
 		@styles
 	</head>
 	<body>
@@ -36,6 +36,5 @@
 		</div>
 		@modals
 		@scripts
-		<script data-main="@routes.MyAssets.js("main")" type="text/javascript"></script>
 	</body>
 </html>
