--- a/app/views/main.scala.html
+++ b/app/views/main.scala.html
@@ -10,14 +10,15 @@
         <title>@title</title>
         <link href="//fonts.googleapis.com/css?family=Roboto|Montserrat:400,700|Open+Sans:400,300,600" rel="stylesheet">
         <link href="//cdnjs.cloudflare.com/ajax/libs/ionicons/1.5.2/css/ionicons.min.css" rel="stylesheet">
-        <link rel="stylesheet" href="@routes.WebJarAssets.at(webJarAssets.locate("bootstrap.min.css"))">
-        <link rel="stylesheet" href="@routes.WebJarAssets.at(webJarAssets.locate("bootstrap-theme.min.css"))">
+        <link rel="stylesheet" href="@routes.MyAssets.lib("bootstrap/css/bootstrap.min.css")">
+        <link rel="stylesheet" href="@routes.MyAssets.lib("bootstrap/css/bootstrap-theme.min.css")">
         <link rel="stylesheet" href="@routes.Assets.at("styles/main.css")">
             <!-- HTML5 shim and Respond.js IE8 support of HTML5 elements and media queries -->
             <!--[if lt IE 9]>
             <script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
             <script src="https://oss.maxcdn.com/libs/respond.js/1.4.2/respond.min.js"></script>
             <![endif]-->
+        <script data-main="@routes.MyAssets.js("main")" src="@routes.MyAssets.lib("requirejs/require.js")" type="text/javascript"></script>
     </head>
     <body>
         <header class="navbar navbar-inverse navbar-fixed-top" role="navigation">
