--- a/app/views/main.scala.html
+++ b/app/views/main.scala.html
@@ -12,8 +12,8 @@
         <link href="//cdnjs.cloudflare.com/ajax/libs/ionicons/1.5.2/css/ionicons.min.css" rel="stylesheet">
         <link rel="stylesheet" href="@routes.MyAssets.lib("bootstrap/css/bootstrap.min.css")">
         <link rel="stylesheet" href="@routes.MyAssets.lib("bootstrap/css/bootstrap-theme.min.css")">
-        <link rel="stylesheet" href="@routes.Assets.at("styles/main.css")">
-            <!-- HTML5 shim and Respond.js IE8 support of HTML5 elements and media queries -->
+        <link rel="stylesheet" media="screen" href="@routes.MyAssets.css("main.css")">
+        <!-- HTML5 shim and Respond.js IE8 support of HTML5 elements and media queries -->
             <!--[if lt IE 9]>
             <script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
             <script src="https://oss.maxcdn.com/libs/respond.js/1.4.2/respond.min.js"></script>
