--- a/app/views/weatherStations.scala.html
+++ b/app/views/weatherStations.scala.html
@@ -1,6 +1,6 @@
-@(weatherStation: models.WeatherStation)(implicit messages: Messages)
+@(weatherStation: Seq[models.WeatherStation])(implicit messages: Messages)
 
-@main(Messages("home.title"), Some(weatherStation)) {
+@main() {
     <div class="weatherStation col-md-6 col-md-offset-3">
         <div class="row">
             <hr class="col-md-12" />
@@ -12,7 +12,8 @@
         <div class="row data">
             <div class="col-md-12">
                 <div class="row">
-                    <p class="col-md-6"><strong>@Messages("Weather station"):</strong></p><p class="col-md-6">@weatherStation.name.getOrElse("None")</p>
+                    <p class="col-md-6"><strong>@Messages("Weather station"):</strong></p>
+                    <p class="col-md-6">@weatherStation.name</p>
                 </div>
             </div>
         </div>
