--- a/app/views/weatherStations.scala.html
+++ b/app/views/weatherStations.scala.html
@@ -1,6 +1,6 @@
-@(weatherStation: Seq[models.WeatherStation])(implicit messages: Messages)
+@(weatherStations: Seq[models.WeatherStation])(implicit messages: Messages)
 
-@main() {
+@main(Messages("weather.stations.title")) {
     <div class="weatherStation col-md-6 col-md-offset-3">
         <div class="row">
             <hr class="col-md-12" />
@@ -13,7 +13,9 @@
             <div class="col-md-12">
                 <div class="row">
                     <p class="col-md-6"><strong>@Messages("Weather station"):</strong></p>
-                    <p class="col-md-6">@weatherStation.name</p>
+                    @for(station <- weatherStations) {
+                        <p class="col-md-6">@station</p>
+                    }
                 </div>
             </div>
         </div>
