--- a/app/views/templates/main.scala.html
+++ b/app/views/templates/main.scala.html
@@ -33,18 +33,7 @@
                     <a class="navbar-brand" href="@routes.ApplicationController.index">Olive</a>
                 </div>
                 <nav class="collapse navbar-collapse">
-                    <ul class="nav navbar-nav">
-                        <li><a href="@routes.ApplicationController.index">@Messages("home")</a></li>
-                    </ul>
-                    <ul class="nav navbar-nav navbar-right">
-                        @user.map { u =>
-                            <li><a href="@routes.ApplicationController.index">@u.fullName</a></li>
-                            <li><a href="@routes.ApplicationController.signOut">@Messages("sign.out")</a></li>
-                        }.getOrElse {
-                            <li><a href="@routes.SignInController.view">@Messages("sign.in")</a></li>
-                            <li><a href="@routes.SignUpController.view">@Messages("sign.up")</a></li>
-                        }
-                    </ul>
+                    @navbarContent
                 </nav>
             </div>
         </header>
