--- a/app/views/weatherStations.scala.html
+++ b/app/views/weatherStations.scala.html
@@ -1,6 +1,6 @@
 @(weatherStations: Seq[models.WeatherStation])(implicit messages: Messages)
 
-@main(Messages("weather.stations.title")) {
+@templates.main(Messages("weather.stations.title")) {
     <div class="weatherStation col-md-6 col-md-offset-3">
         <div class="row">
             <hr class="col-md-12" />
