--- a/app/views/signIn.scala.html
+++ b/app/views/signIn.scala.html
@@ -3,7 +3,7 @@
 @import com.mohiva.play.silhouette.impl.providers.oauth2.ClefProvider
 @import b3.inline.fieldConstructor
 
-@main(Messages("sign.in.title")) {
+@templates.default(Messages("sign.in.title")) {
     @request.flash.get("error").map { msg =>
         <div class="col-md-6 col-md-offset-3 alert alert-danger alert-error">
             <a href="#" class="close" data-dismiss="alert">&times;</a>
