--- a/app/views/templates/default.scala.html
+++ b/app/views/templates/default.scala.html
@@ -3,13 +3,21 @@
 @import controllers.routes
 
 @navbarContent = {
+    @if(withMainTabs) {
+        <ul class="nav navbar-nav">
+            @loggedUser.map { implicit user =>
+                    <li class="@("active".when(tab == "weatherStations"))"><a href="@routes.WeatherStationController.index">Weather stations</a></li>
+            }
+        </ul>
+    }
+
     <ul class="nav navbar-nav navbar-right">
     @loggedUser.map { u =>
     <li><a href="@routes.ApplicationController.index">@u.fullName</a></li>
     <li><a href="@routes.ApplicationController.signOut">@Messages("sign.out")</a></li>
     }.getOrElse {
-        <li><a href="@routes.SignInController.view">@Messages("sign.in")</a></li>
-        <li><a href="@routes.SignUpController.view">@Messages("sign.up")</a></li>
+        <li class="@("active".when(tab == "signin"))"><a href="@routes.SignInController.view">@Messages("sign.in")</a></li>
+        <li class="@("active".when(tab == "signup"))"><a href="@routes.SignUpController.view">@Messages("sign.up")</a></li>
     }
     </ul>
 }
