added required deps for bootstrap and jquery

--- a/app/views/templates/main.scala.html
+++ b/app/views/templates/main.scala.html
@@ -43,6 +43,6 @@
             </div>
         </main>
         <script type="text/javascript" src="@routes.AssetsController.lib("jquery.min.js")"></script>
-        <script type="text/javascript" src="@routes.AssetsController.lib("bootstrap.min.js")"></script>
+        <script type="text/javascript" src="@routes.AssetsController.lib("bootstrap/js/bootstrap.min.js")"></script>
     </body>
 </html>
