fixed jquery dependancy

--- a/app/views/templates/main.scala.html
+++ b/app/views/templates/main.scala.html
@@ -42,7 +42,7 @@
                 @content
             </div>
         </main>
-        <script type="text/javascript" src="@routes.AssetsController.lib("jquery.min.js")"></script>
+        <script type="text/javascript" src="@routes.AssetsController.lib("jquery/jquery.min.js")"></script>
         <script type="text/javascript" src="@routes.AssetsController.lib("bootstrap/js/bootstrap.min.js")"></script>
     </body>
 </html>
