--- a/app/views/templates/default.scala.html
+++ b/app/views/templates/default.scala.html
@@ -16,7 +16,7 @@
     <li><a href="@routes.ApplicationController.index">@u.fullName</a></li>
     <li><a href="@routes.ApplicationController.signOut">@Messages("sign.out")</a></li>
     }.getOrElse {
-        <li class="@("active".when(tab == "signin"))"><a href="@routes.SignInController.view">@Messages("sign.in")</a></li>
+        <li class="@("active".when(tab == "signIn"))"><a href="@routes.SignInController.view">@Messages("sign.in")</a></li>
         <li class="@("active".when(tab == "signup"))"><a href="@routes.SignUpController.view">@Messages("sign.up")</a></li>
     }
     </ul>
