--- a/app/views/weatherStations.scala.html
+++ b/app/views/weatherStations.scala.html
@@ -1,6 +1,6 @@
 @(weatherStations: Seq[models.WeatherStation])(implicit messages: Messages)
 
-@templates.default(Messages("weather.stations.title")) {
+@templates.default(Messages("weather.stations.title"), tab = "weatherStations") {
     <div class="weatherStation col-md-6 col-md-offset-3">
         <div class="row">
             <hr class="col-md-12" />
