--- a/app/views/templates/default.scala.html
+++ b/app/views/templates/default.scala.html
@@ -17,7 +17,7 @@
     <li><a href="@routes.ApplicationController.signOut">@Messages("sign.out")</a></li>
     }.getOrElse {
         <li class="@("active".when(tab == "signIn"))"><a href="@routes.SignInController.view">@Messages("sign.in")</a></li>
-        <li class="@("active".when(tab == "signup"))"><a href="@routes.SignUpController.view">@Messages("sign.up")</a></li>
+        <li class="@("active".when(tab == "signUp"))"><a href="@routes.SignUpController.view">@Messages("sign.up")</a></li>
     }
     </ul>
 }
