working implicit user on views

--- a/app/views/templates/default.scala.html
+++ b/app/views/templates/default.scala.html
@@ -23,4 +23,4 @@
     </ul>
 }
 
-@templates.main(title, loggedUser, navbarContent, styles, scripts, modals)(content)
+@templates.main(title, navbarContent, styles, scripts, modals)(content)
