--- a/app/views/templates/main.scala.html
+++ b/app/views/templates/main.scala.html
@@ -1,4 +1,4 @@
-@(title: String, user: Option[models.User] = None, navbarContent: Html = Html(""), styles: Html = Html(""), scripts: Html = Html(""), modals: Html = Html(""))(content: Html)(implicit messages: Messages)
+@(title: String, navbarContent: Html = Html(""), styles: Html = Html(""), scripts: Html = Html(""), modals: Html = Html(""))(content: Html)(implicit messages: Messages)
 
 <!DOCTYPE html>
 <html lang="en">
