--- a/app/views/home.scala.html
+++ b/app/views/home.scala.html
@@ -1,28 +1,28 @@
-@(user: models.User)(implicit messages: Messages, webJarAssets: WebJarAssets)
+@()(implicit messages: Messages, loggedUser: models.User, webJarAssets: WebJarAssets)
 
-@templates.default(Messages("home.title"), Some(user)) {
+@templates.default(Messages("home.title")) {
     <div class="user col-md-6 col-md-offset-3">
         <div class="row">
             <hr class="col-md-12" />
             <h4 class="col-md-8">@Messages("welcome.signed.in")</h4>
             <div class="col-md-4 text-right">
-                <img src="@user.avatarURL.getOrElse(routes.Assets.at("images/silhouette.png"))" height="40px" />
+                <img src="@loggedUser.avatarURL.getOrElse(routes.Assets.at("images/silhouette.png"))" height="40px" />
             </div>
             <hr class="col-md-12" />
         </div>
         <div class="row data">
             <div class="col-md-12">
                 <div class="row">
-                    <p class="col-md-6"><strong>@Messages("first.name"):</strong></p><p class="col-md-6">@user.firstName.getOrElse("None")</p>
+                    <p class="col-md-6"><strong>@Messages("first.name"):</strong></p><p class="col-md-6">@loggedUser.firstName.getOrElse("None")</p>
                 </div>
                 <div class="row">
-                    <p class="col-md-6"><strong>@Messages("last.name"):</strong></p><p class="col-md-6">@user.lastName.getOrElse("None")</p>
+                    <p class="col-md-6"><strong>@Messages("last.name"):</strong></p><p class="col-md-6">@loggedUser.lastName.getOrElse("None")</p>
                 </div>
                 <div class="row">
-                    <p class="col-md-6"><strong>@Messages("full.name"):</strong></p><p class="col-md-6">@user.fullName.getOrElse("None")</p>
+                    <p class="col-md-6"><strong>@Messages("full.name"):</strong></p><p class="col-md-6">@loggedUser.fullName.getOrElse("None")</p>
                 </div>
                 <div class="row">
-                    <p class="col-md-6"><strong>@Messages("email"):</strong></p><p class="col-md-6">@user.email.getOrElse("None")</p>
+                    <p class="col-md-6"><strong>@Messages("email"):</strong></p><p class="col-md-6">@loggedUser.email.getOrElse("None")</p>
                 </div>
             </div>
         </div>
