--- a/app/views/templates/default.scala.html
+++ b/app/views/templates/default.scala.html
@@ -9,6 +9,9 @@
                     <li class="@("active".when(tab == "weatherStations"))">
                         <a href="@routes.WeatherStationController.index">Weather stations</a>
                     </li>
+                    <li class="@("active".when(tab == "samples"))">
+                        <a href="@routes.SampleController.index">@Messages("samples.title")</a>
+                    </li>
             }
     }
     </ul>
