--- a/app/views/templates/main.scala.html
+++ b/app/views/templates/main.scala.html
@@ -8,10 +8,11 @@
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link rel="shortcut icon" type="image/png" href="@routes.Assets.at("images/favicon.png")">
         <title>@title</title>
-        <link href="//fonts.googleapis.com/css?family=Roboto|Montserrat:400,700|Open+Sans:400,300,600" rel="stylesheet">
+        <link rel="stylesheet" type="text/css" href="//fonts.googleapis.com/css?family=Roboto:300,400,500,700">
+        <link rel="stylesheet" type="text/css" href="//fonts.googleapis.com/icon?family=Material+Icons">
         <link href="//cdnjs.cloudflare.com/ajax/libs/ionicons/1.5.2/css/ionicons.min.css" rel="stylesheet">
         <link rel="stylesheet" href="@routes.AssetsController.lib("bootstrap/css/bootstrap.min.css")">
-        <link rel="stylesheet" href="@routes.AssetsController.lib("bootstrap/css/bootstrap-theme.min.css")">
+        <link rel="stylesheet" href="@routes.AssetsController.lib("bootstrap-material-design/css/bootstrap-material-design.css")">
         <link rel="stylesheet" media="screen" href="@routes.AssetsController.css("main.css")">
         <!-- HTML5 shim and Respond.js IE8 support of HTML5 elements and media queries -->
             <!--[if lt IE 9]>
