--- a/app/views/templates/main.scala.html
+++ b/app/views/templates/main.scala.html
@@ -45,5 +45,7 @@
         </main>
         <script type="text/javascript" src="@routes.AssetsController.lib("jquery/jquery.min.js")"></script>
         <script type="text/javascript" src="@routes.AssetsController.lib("bootstrap/js/bootstrap.min.js")"></script>
+        <script type="text/javascript" src="@routes.AssetsController.lib("bootstrap-material-design/js/material.min.js")"></script>
+        <script type="text/javascript" src="@routes.AssetsController.lib("bootstrap-material-design/js/ripples.min.js")"></script>
     </body>
 </html>
