added cdn instead of local for bootstrap

--- a/app/views/templates/main.scala.html
+++ b/app/views/templates/main.scala.html
@@ -11,7 +11,7 @@
         <link rel="stylesheet" type="text/css" href="//fonts.googleapis.com/css?family=Roboto:300,400,500,700">
         <link rel="stylesheet" type="text/css" href="//fonts.googleapis.com/icon?family=Material+Icons">
         <link href="//cdnjs.cloudflare.com/ajax/libs/ionicons/1.5.2/css/ionicons.min.css" rel="stylesheet">
-        <link rel="stylesheet" href="@routes.AssetsController.lib("bootstrap/css/bootstrap.min.css")">
+        <link rel="stylesheet" type="text/css" href="//maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css">
         <link rel="stylesheet" href="@routes.AssetsController.lib("bootstrap-material-design/css/bootstrap-material-design.css")">
         <link rel="stylesheet" media="screen" href="@routes.AssetsController.css("main.css")">
         <!-- HTML5 shim and Respond.js IE8 support of HTML5 elements and media queries -->
