--- a/app/views/templates/main.scala.html
+++ b/app/views/templates/main.scala.html
@@ -12,7 +12,7 @@
         <link rel="stylesheet" type="text/css" href="//fonts.googleapis.com/icon?family=Material+Icons">
         <link href="//cdnjs.cloudflare.com/ajax/libs/ionicons/1.5.2/css/ionicons.min.css" rel="stylesheet">
         <link rel="stylesheet" type="text/css" href="//maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css">
-        <link rel="stylesheet" href="@routes.AssetsController.lib("bootstrap-material-design/css/bootstrap-material-design.css")">
+        <link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/bootstrap-material-design/0.5.9/css/bootstrap-material-design.css">
         <link rel="stylesheet" media="screen" href="@routes.AssetsController.css("main.css")">
         <!-- HTML5 shim and Respond.js IE8 support of HTML5 elements and media queries -->
             <!--[if lt IE 9]>
@@ -43,9 +43,10 @@
                 @content
             </div>
         </main>
-        <script type="text/javascript" src="@routes.AssetsController.lib("jquery/jquery.min.js")"></script>
-        <script type="text/javascript" src="@routes.AssetsController.lib("bootstrap/js/bootstrap.min.js")"></script>
-        <script type="text/javascript" src="@routes.AssetsController.lib("bootstrap-material-design/js/material.min.js")"></script>
-        <script type="text/javascript" src="@routes.AssetsController.lib("bootstrap-material-design/js/ripples.min.js")"></script>
+        <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.2.3/jquery.min.js"></script>
+        <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.3.6/js/bootstrap.min.js"></script>
+        <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-material-design/0.5.9/js/material.min.js"></script>
+        <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-material-design/0.5.9/js/ripples.min.js"></script>
+        <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.1.2/Chart.bundle.js"></script>
     </body>
 </html>
