test chart working

--- a/app/views/samples.scala.html
+++ b/app/views/samples.scala.html
@@ -2,16 +2,10 @@
 
 @templates.logged(Messages("samples.title"), tab = "samples") {
     <div class="sample col-md-6 col-md-offset-3">
-        <div class="row">
-            <hr class="col-md-12" />
-            <div class="col-md-4 text-right">
-            </div>
-            <hr class="col-md-12" />
-        </div>
         <div class="row data">
             <div class="col-md-12">
-                <div class="row">
-                </div>
+                    Test
+                    <canvas id="myChart" width="400" height="400"></canvas>
             </div>
         </div>
     </div>
