--- a/app/views/templates/main.scala.html
+++ b/app/views/templates/main.scala.html
@@ -48,6 +48,6 @@
         <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-material-design/0.5.9/js/material.min.js"></script>
         <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-material-design/0.5.9/js/ripples.min.js"></script>
         <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.1.2/Chart.bundle.js"></script>
-        <script type="text/javascript" src="@routes.ApplicationController.javascriptRoutes"></script>
+        <script type="text/javascript" src="@routes.ApplicationController.jsRoutes"></script>
     </body>
 </html>
