working AMD with require js

--- a/app/views/samples.scala.html
+++ b/app/views/samples.scala.html
@@ -8,4 +8,6 @@
             </div>
         </div>
     </div>
+    @helper.requireJs(core = routes.AssetsController.lib("requirejs/require.js").url,
+                      module = routes.Assets.at("javascripts/history/charts.js").url)
 }
