proper view is not loaded on plant action, js loads and active tab is chosen good

--- a/app/views/plant_models.scala.html
+++ b/app/views/plant_models.scala.html
@@ -1,6 +1,6 @@
-@(samples: Seq[models.Sample])(implicit messages: Messages, loggedUser: User)
+@()(implicit messages: Messages, loggedUser: User)
 
-@templates.logged(Messages("samples.title"), tab = "samples") {
+@templates.logged(Messages("samples.title"), tab = "plantDiseaseModels") {
     <div class="sample col-md-8 col-md-offset-2">
         <div class="row data">
             <div class="col-md-12">
