fab pull on right

--- a/app/views/plant_models.scala.html
+++ b/app/views/plant_models.scala.html
@@ -4,7 +4,21 @@
     <div class="sample col-md-8 col-md-offset-2">
         <div class="row data">
             <div class="col-md-12">
-                    Plant disease models
+                <div class="list-group">
+                    <div class="list-group-item">
+                        <div class="row-action-primary">
+                            <i class="material-icons">folder</i>
+                        </div>
+                        <div class="row-content">
+                            <div class="least-content">15m</div>
+                            <h4 class="list-group-item-heading">Tile with a label</h4>
+
+                            <p class="list-group-item-text">Donec id elit non mi porta gravida at eget metus.</p>
+                        </div>
+                    </div>
+                    <div class="list-group-separator"></div>
+                </div>
+                <a href="" class="btn btn-success btn-fab pull-right" ><i class="material-icons">grade</i></a>
             </div>
         </div>
     </div>
