added checkbox near remember me

--- a/app/views/signIn.scala.html
+++ b/app/views/signIn.scala.html
@@ -16,7 +16,11 @@
             @helper.CSRF.formField
             @b3.email(signInForm("email"), '_hiddenLabel -> Messages("email"), 'placeholder -> Messages("email"), 'class -> "form-control input-lg")
             @b3.password(signInForm("password"), '_hiddenLabel -> Messages("password"), 'placeholder -> Messages("password"), 'class -> "form-control input-lg")
-            @b3.checkbox(signInForm("rememberMe"), '_text -> Messages("remember.me"), 'checked -> true)
+            <div class="checkbox">
+                <label>
+                    <input type="checkbox" checked="@signInForm("rememberMe")"><span class="checkbox-material"><span class="check"></span></span>@Messages("remember.me")
+                </label>
+            </div>
             <div class="form-group">
                 <div>
                     <button id="submit" type="submit" value="submit" class="btn btn-lg btn-primary btn-block">@Messages("sign.in")</button>
