--- a/app/views/plant_models.scala.html
+++ b/app/views/plant_models.scala.html
@@ -28,7 +28,7 @@
             <div class="modal-content">
                 <div class="modal-header">
                     <button type="button" class="close" data-dismiss="modal" aria-hidden="true">×</button>
-                    <h4 class="modal-title">Modal title</h4>
+                    <h4 class="modal-title">@Messages("plant.disease.models.create")</h4>
                 </div>
                 <div class="modal-body">
                     <p>One fine body…</p>
