--- a/app/views/plant_models.scala.html
+++ b/app/views/plant_models.scala.html
@@ -1,4 +1,5 @@
-@()(implicit messages: Messages, loggedUser: User)
+@(plantDiseaseModelForm: Form[forms.PlantDiseaseModelForm.Data])(implicit request: RequestHeader, messages: Messages, loggedUser: User)
+@import b3.inline.fieldConstructor
 
 @templates.logged(Messages("samples.title"), tab = "plantDiseaseModels") {
     <div class="sample col-md-8 col-md-offset-2">
@@ -31,7 +32,10 @@
                     <h4 class="modal-title">@Messages("plant.disease.models.create")</h4>
                 </div>
                 <div class="modal-body">
-                    <p>One fine body…</p>
+                    @helper.form(action = routes.PlantDiseaseController.submit()) {
+                        @helper.CSRF.formField
+                        @b3.text(plantDiseaseModelForm("name"), '_hiddenLabel -> Messages("plantDisease.name"), 'class -> "form-control input-lg")
+                    }
                 </div>
                 <div class="modal-footer">
                     <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
