plant disease model simple form working

--- a/app/views/plant_models.scala.html
+++ b/app/views/plant_models.scala.html
@@ -32,14 +32,16 @@
                     <h4 class="modal-title">@Messages("plant.disease.models.create")</h4>
                 </div>
                 <div class="modal-body">
-                    @helper.form(action = routes.PlantDiseaseController.submit()) {
+                    @helper.form(action = routes.PlantDiseaseController.submit(), 'class -> "plant-disease-form") {
                         @helper.CSRF.formField
-                        @b3.text(plantDiseaseModelForm("name"), '_hiddenLabel -> Messages("plantDisease.name"), 'class -> "form-control input-lg")
+                        @b3.text(plantDiseaseModelForm("name"), '_label -> Messages("plant.disease.models.name"), 'class -> "form-control input-lg col-md-10")
+                        @b3.text(plantDiseaseModelForm("description"), '_label -> Messages("plant.disease.models.description"), 'class -> "form-control input-lg col-md-10")
+                        @b3.text(plantDiseaseModelForm("modelImageUrl"), '_label -> Messages("plant.disease.models.modelImageUrl"), 'class -> "form-control input-lg col-md-10")
                     }
                 </div>
                 <div class="modal-footer">
                     <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
-                    <button type="button" class="btn btn-primary">Save changes</button>
+                    <button type="button" class="btn btn-primary save-plant-disease">Save changes</button>
                 </div>
             </div>
         </div>
