changed text to url for image

--- a/app/views/plant_models.scala.html
+++ b/app/views/plant_models.scala.html
@@ -36,7 +36,7 @@
                     @helper.CSRF.formField
                     @b3.text(plantDiseaseModelForm("name"), '_label -> Messages("plant.disease.models.name"), 'class -> "form-control input-lg col-md-10")
                     @b3.text(plantDiseaseModelForm("description"), '_label -> Messages("plant.disease.models.description"), 'class -> "form-control input-lg col-md-10")
-                    @b3.text(plantDiseaseModelForm("modelImageUrl"), '_label -> Messages("plant.disease.models.modelImageUrl"), 'class -> "form-control input-lg col-md-10")
+                    @b3.url(plantDiseaseModelForm("modelImageUrl"), '_label -> Messages("plant.disease.models.modelImageUrl"), 'class -> "form-control input-lg col-md-10")
                     </div>
                     <div class="modal-footer">
                             <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
