--- a/app/views/create_model.scala.html
+++ b/app/views/create_model.scala.html
@@ -9,40 +9,36 @@
             @b3.text(plantDiseaseModelForm("name"), '_label -> Messages("plant.disease.models.name"), 'class -> "form-control input-lg col-md-10")
             @b3.text(plantDiseaseModelForm("description"), '_label -> Messages("plant.disease.models.description"), 'class -> "form-control input-lg col-md-10")
             @b3.url(plantDiseaseModelForm("modelImageUrl"), '_label -> Messages("plant.disease.models.modelImageUrl"), 'class -> "form-control input-lg col-md-10")
-            <div class="plant-disease-filters">
+            <div class="plant-disease-conditions">
+                <h5>For the plant disease model to work you must add at least one weather condition</h5>
+                <button type="button" class="btn btn-info create-plant-disease-condition">Add condition</button>
             </div>
-            <button type="submit" class="btn btn-primary save-plant-disease">Save changes</button>
+            <button type="submit" class="btn btn-raised btn-primary save-plant-disease">Save changes</button>
             <a href="@routes.PlantDiseaseController.index()" class="btn btn-default">Back to list</a>
         }
     </div>
 
-@*    <div class="modal" tabindex="-1">
+    <div class="modal" tabindex="-1">
         <div class="modal-dialog">
             <div class="modal-content">
                 <div class="modal-header">
                     <button type="button" class="close" data-dismiss="modal" aria-hidden="true">×</button>
-                    <h4 class="modal-title">@Messages("plant.disease.models.create")</h4>
+                    <h4 class="modal-title">@Messages("plant.disease.models.condition.create")</h4>
                 </div>
-                @helper.form(action = routes.PlantDiseaseController.submit(), 'class -> "plant-disease-form") {
+                @helper.form(action = routes.PlantDiseaseController.conditionSubmit(), 'class -> "plant-disease-condition-form") {
                     <div class="modal-body">
                     @helper.CSRF.formField
-                    @b3.text(plantDiseaseModelForm("name"), '_label -> Messages("plant.disease.models.name"), 'class -> "form-control input-lg col-md-10")
-                    @b3.text(plantDiseaseModelForm("description"), '_label -> Messages("plant.disease.models.description"), 'class -> "form-control input-lg col-md-10")
-                    @b3.url(plantDiseaseModelForm("modelImageUrl"), '_label -> Messages("plant.disease.models.modelImageUrl"), 'class -> "form-control input-lg col-md-10")
                 </div>
-                    <div class="plant-disease-filters">
-
-                    </div>
                     <div class="modal-footer">
                             <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
-                            <button type="button" class="btn btn-primary save-plant-disease">Save changes</button>
+                            <button type="button" class="btn btn-primary save-plant-disease-condition">Save changes</button>
                             <input type="submit" style="display:none;"/>
                     </div>
                     }
             </div>
         </div>
     </div>
-*@
+
     @helper.requireJs(core = routes.AssetsController.lib("requirejs/require.js").url,
-                      module = routes.Assets.at("javascripts/plantDiseaseModels/plantDiseaseModels.js").url)
+                      module = routes.Assets.at("javascripts/plantDiseaseModels/plantDiseaseModelsCreate.js").url)
 }
