--- a/app/views/create_model.scala.html
+++ b/app/views/create_model.scala.html
@@ -23,12 +23,15 @@
             <div class="modal-content">
                 <div class="modal-header">
                     <button type="button" class="close" data-dismiss="modal" aria-hidden="true">×</button>
-                    <h4 class="modal-title">@Messages("plant.disease.models.condition.create")</h4>
+                    <h4 class="modal-title">@Messages("plant.disease.condition.create")</h4>
                 </div>
                 @helper.form(action = routes.PlantDiseaseController.conditionSubmit(), 'class -> "plant-disease-condition-form") {
                     <div class="modal-body">
                     @helper.CSRF.formField
-                    @b3.select( plantDiseaseConditionForm("paramId"), options = Seq("1"->Messages("temperature"), "2"->Messages("humidity")), '_label -> Messages("plant.disease.models.select.condition") )
+                    @b3.select( plantDiseaseConditionForm("paramId"), options = Seq("1"->Messages("temperature"), "2"->Messages("humidity")), '_label -> Messages("plant.disease.select.condition") )
+                    @b3.select( plantDiseaseConditionForm("conditionParam"), options = Seq("1"->">", "2" -> "="), '_label -> Messages("plant.disease.select.conditionParam") )
+                    @b3.number( plantDiseaseConditionForm("condition"), '_label -> Messages("plant.disease.condition.limit"), 'step -> 5, '_default -> 0)
+                    @b3.number( plantDiseaseConditionForm("duration"), '_label -> Messages("plant.disease.condition.duration"), 'step -> 360, '_default -> 0)
                     </div>
                     <div class="modal-footer">
                             <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
