--- a/app/views/create_model.scala.html
+++ b/app/views/create_model.scala.html
@@ -30,12 +30,12 @@
                     @helper.CSRF.formField
                     @b3.select( plantDiseaseConditionForm("paramId"), options = Seq("1"->Messages("temperature"), "2"->Messages("humidity")), '_label -> Messages("plant.disease.select.condition") )
                     @b3.select( plantDiseaseConditionForm("conditionParam"), options = Seq("1"->">", "2" -> "="), '_label -> Messages("plant.disease.select.conditionParam") )
-                    @b3.number( plantDiseaseConditionForm("condition"), '_label -> Messages("plant.disease.condition.limit"), 'step -> 5, '_default -> 0)
-                    @b3.number( plantDiseaseConditionForm("duration"), '_label -> Messages("plant.disease.condition.duration"), 'step -> 360, '_default -> 0)
+                    @b3.number( plantDiseaseConditionForm("condition"), '_label -> Messages("plant.disease.condition.limit"), 'step -> 5, '_default -> "0")
+                    @b3.number( plantDiseaseConditionForm("duration"), '_label -> Messages("plant.disease.condition.duration"), 'step -> 360, '_default -> "0")
                     </div>
                     <div class="modal-footer">
                             <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
-                            <button type="button" class="btn btn-primary save-plant-disease-condition">Save changes</button>
+                            <button type="button" class="btn btn-primary save-plant-disease-condition">Create condition</button>
                             <input type="submit" style="display:none;"/>
                     </div>
                     }
