working model form validation

--- a/app/views/create_model.scala.html
+++ b/app/views/create_model.scala.html
@@ -15,7 +15,8 @@
                 <ul class="condition-list">
                 </ul>
             </div>
-            <button type="submit" class="btn btn-raised btn-primary save-plant-disease">Save changes</button>
+            <button type="button" class="btn btn-raised btn-primary save-plant-disease">Save changes</button>
+            <input type="submit" style="display:none;"/>
             <a href="@routes.PlantDiseaseController.index()" class="btn btn-default">Back to list</a>
         }
     </div>
