converts to numeric only if required

--- a/app/views/plant_models.scala.html
+++ b/app/views/plant_models.scala.html
@@ -15,7 +15,7 @@
                                 <div class="least-content">15m</div>
                                 <h4 class="list-group-item-heading">@diseaseModel.name</h4>
 
-                                <p class="list-group-item-text">Donec id elit non mi porta gravida at eget metus.</p>
+                                <p class="list-group-item-text">@diseaseModel.description</p>
                             </div>
                         </div>
                         <div class="list-group-separator"></div>
