centered icon with flexbox in platn disease models

--- a/app/assets/stylesheets/main.less
+++ b/app/assets/stylesheets/main.less
@@ -1,1 +1,16 @@
 @import "_old";
+
+.plant-disease-model {
+  display: flex;
+  justify-content: center;
+  flex-direction: row;
+}
+
+.plant-disease-content, .plant-disease-icon {
+  flex-wrap: nowrap;
+}
+.plant-disease-icon-container {
+  display: flex;
+  justify-content: center;
+  flex-direction: column;
+}
