--- a/app/views/plant_models.scala.html
+++ b/app/views/plant_models.scala.html
@@ -14,10 +14,14 @@
                                 </div>
                             </div>
                             <div class="row-content plant-disease-content">
-                                <div class="least-content">15m</div>
                                 <h4 class="list-group-item-heading">
                                     @diseaseModel.name
                                 </h4>
+                                <div class="plant-disease-conditions">
+                                    @for(condition <- diseaseConditions) {
+                                        <a href="" class="btn">@condition.conditionParam</a>
+                                    }
+                                </div>
                                 <p class="list-group-item-text">
                                     @if(diseaseModel.description.isEmpty) {
                                         @messages("plant.disease.models.description.empty")
