--- a/app/views/create_model.scala.html
+++ b/app/views/create_model.scala.html
@@ -29,8 +29,8 @@
                 </div>
                 @helper.form(action = routes.PlantDiseaseController.conditionSubmit(), 'class -> "plant-disease-condition-form") {
                     <div class="modal-body">
-                    @b3.select( plantDiseaseConditionForm("paramId"), options = Seq("1"->Messages("temperature"), "2"->Messages("humidity")), '_label -> Messages("plant.disease.select.condition"), 'required -> "true")
-                    @b3.select( plantDiseaseConditionForm("conditionParam"), options = Seq("1"->">", "2" -> "="), '_label -> Messages("plant.disease.select.conditionParam"), 'required -> "true")
+                    @b3.select( plantDiseaseConditionForm("paramId"), options = PlantDiseaseCondition.weatherParameters(messages), '_label -> Messages("plant.disease.select.condition"), 'required -> "true")
+                    @b3.select( plantDiseaseConditionForm("conditionParam"), options = PlantDiseaseCondition.conditionParams(), '_label -> Messages("plant.disease.select.conditionParam"), 'required -> "true")
                     @b3.number( plantDiseaseConditionForm("condition"), '_label -> Messages("plant.disease.condition.limit"), 'step -> 5, 'required -> "true")
                     @b3.number( plantDiseaseConditionForm("duration"), '_label -> Messages("plant.disease.condition.duration"), 'step -> 360, 'min -> 0, 'required -> "true")
                     </div>
