--- a/app/assets/stylesheets/main.less
+++ b/app/assets/stylesheets/main.less
@@ -16,5 +16,14 @@
 }
 
 .plant-disease-conditions {
+  margin-bottom: 0.3em;
+}
 
+.conditions-info {
+  display: inline-block;
+  margin-right: 1em;
+  font-size: 1em;
+  padding: 0.3em 0.6em;
+  background-color: rgba(0, 0, 0, 0.25);
+  margin-bottom: 0.1em;
 }
