--- a/app/views/plant_models.scala.html
+++ b/app/views/plant_models.scala.html
@@ -10,7 +10,7 @@
                         <div class="list-group-item plant-disease-model">
                             <div class="plant-disease-icon-container">
                                 <div class="row-action-primary plant-disease-icon">
-                                    <i class="material-icons">local_florist</i>
+                                    <i class="material-icons icons-lg">local_florist</i>
                                 </div>
                             </div>
                             <div class="row-content plant-disease-content">
@@ -19,16 +19,17 @@
                                 </h4>
                                 <div class="plant-disease-conditions">
                                     @for(condition <- diseaseConditions) {
-                                        <i class="btn btn-sm">
+                                        <div class="label label-default conditions-info">
                                             @PlantDiseaseCondition.getWeatherParameterById(condition.paramId, messages)
                                             @PlantDiseaseCondition.getConditionParamById(condition.conditionParam)
                                             @condition.condition
                                             @Messages("for at least")
                                             @condition.duration
                                             @Messages("hours")
-                                        </i>
+                                        </div>
                                     }
                                 </div>
+
                                 <p class="list-group-item-text">
                                     @if(diseaseModel.description.isEmpty) {
                                         @messages("plant.disease.models.description.empty")
@@ -36,6 +37,7 @@
                                         @diseaseModel.description
                                     }
                                 </p>
+
                             </div>
                         </div>
                         <div class="list-group-separator"></div>
