--- a/app/assets/stylesheets/main.less
+++ b/app/assets/stylesheets/main.less
@@ -22,8 +22,13 @@
 .conditions-info {
   display: inline-block;
   margin-right: 1em;
-  font-size: 1em;
-  padding: 0.3em 0.6em;
+  font-size: 0.9em;
+  padding: 0.4em 0.6em;
   background-color: rgba(0, 0, 0, 0.25);
   margin-bottom: 0.15em;
+  line-height: 1;
+  color: #fff;
+  text-align: center;
+  white-space: nowrap;
+  vertical-align: baseline;
 }
