--- a/app/assets/stylesheets/main.less
+++ b/app/assets/stylesheets/main.less
@@ -1,9 +1,13 @@
-@import "_old";
+//@import "_old";
 
 .plant-disease-model {
   display: flex;
   justify-content: center;
   flex-direction: row;
+}
+
+.list-group .plant-disease-model {
+  padding: 0;
 }
 
 .plant-disease-content, .plant-disease-icon {
@@ -19,10 +23,14 @@
   margin-bottom: 0.3em;
 }
 
+.starter-template {
+  padding: 85px 0;
+}
+
 .conditions-info {
   display: inline-block;
   margin-right: 1em;
-  font-size: 0.9em;
+  font-size: 0.8em;
   padding: 0.4em 0.6em;
   background-color: rgba(0, 0, 0, 0.25);
   margin-bottom: 0.15em;
