--- a/app/assets/stylesheets/main.less
+++ b/app/assets/stylesheets/main.less
@@ -6,10 +6,6 @@
   flex-direction: row;
 }
 
-.list-group .plant-disease-model {
-  padding: 0;
-}
-
 .plant-disease-content, .plant-disease-icon {
   flex-wrap: nowrap;
 }
@@ -24,7 +20,7 @@
 }
 
 .starter-template {
-  padding: 85px 0;
+  padding: 6em 0;
 }
 
 .conditions-info {
@@ -39,4 +35,9 @@
   text-align: center;
   white-space: nowrap;
   vertical-align: baseline;
+}
+
+.create-plant-disease-button-container {
+  display: inline-block;
+  margin-right: 1.5em;
 }
