added disease warning boilerplate for controller routes and view

--- a/app/views/templates/default.scala.html
+++ b/app/views/templates/default.scala.html
@@ -19,7 +19,7 @@
                     <a href="@routes.SampleController.index">@Messages("weather.now.title")</a>
                 </li>
                 <li class="@("active".when(tab == "diseaseWarnings"))">
-                    <a href="@routes.SampleController.index">@Messages("disease.warnings.title")</a>
+                    <a href="@routes.DiseaseWarningController.index">@Messages("disease.warnings.title")</a>
                 </li>
             }
     }
